fix: middle responsive spacing

--- a/src/app/modules/posts/components/posts-card-render/posts-card-render.component.scss
+++ b/src/app/modules/posts/components/posts-card-render/posts-card-render.component.scss
@@ -8,7 +8,13 @@ div.post-columns {
   }
 
   app-card:nth-child(2) {
-    margin: 0 2.4rem;
+    margin: 0 4.8rem;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  div.main {
+    padding: 0 20px;
   }
 }
 
@@ -16,6 +22,9 @@ div.post-columns {
   div.post-columns {
     flex-direction: column;
 
+    app-card:nth-child(2) {
+      margin: 0;
+    }
     app-card {
       display: inline-block;
     }
